# breakthrough-db-autotests

./: README.md  prek.toml  pyproject.toml  ruff.toml
solutions/: hw_01_sqlite.py  pyproject.toml
tasks/: README.md  hw_02_psycopg.py
tasks/solutions/: hw_01_sqlite.py
testing/: coverage.ini  pytest_plugin.py  settings.py
testing/test_hw_01_sqlite/: __init__.py  conftest.py  constants.py  dto.py  factories.py
testing/test_hw_01_sqlite/tests/: test_deletes.py  test_ingredients.py  test_recipes.py  test_search.py  test_tables.py  test_updates.py
testing/test_hw_02_psycopg/: __init__.py  conftest.py  db.py  dto.py
testing/test_hw_02_psycopg/tests/: test_dynamic_columns.py  test_filter_recipes.py  test_insert_recipe.py  test_search_recipes.py  test_update_meta.py
