[project]
name = "py-db-autotests"
version = "0.1.0"
description = "Python Breakthrough autotests for Python + DB"
requires-python = ">=3.14"
authors = [
  {name = "Suren Khorenyan"},
]

dependencies = [
    "faker>=40.15.0",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
]

[project.urls]
Homepage = "https://web.mahenzon.ru/"

[dependency-groups]
dev = [
    "black>=26.3.1",
]
