[project]
name = "py-db-autotests"
version = "0.1.0"
description = "Python Breakthrough autotests for Python + DB"
requires-python = ">=3.14"
authors = [
    { name = "Suren Khorenyan" },
]

dependencies = [
    "coverage>=7.14.0",
    "faker>=40.15.0",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[project.urls]
Homepage = "https://web.mahenzon.ru/"

[project.entry-points.pytest11]
py_db_autotests = "testing.pytest_plugin"

[tool.pytest.ini_options]
testpaths = [
    "testing",
]
markers = [
    "sqlite",
]
addopts = [
    "--cov=solutions",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
branch = true
source = [
    "solutions",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"

[dependency-groups]
dev = [
    "black>=26.3.1",
    "prek>=0.3.13",
    "ruff>=0.15.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "testing",
]
